---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["strong-reviewed"]
  transitive-third-party1:10.0.0 likely missing ["strong-reviewed"]

recommended audits for strong-reviewed:
    cargo vet inspect third-party1 10.0.0             (used by first-party)   (100 lines)
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

